Tue Aug 12 17:05:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/corbafwd.cpp:
        * tao/corbafwd.h:

          Removed CORBA::_tc_Visibility and CORBA::_tc_ValueModifier.

        * tao/Valuetype/ValueBase.cpp:
        * tao/Valuetype/ValueBase.h:

          Added declaration and initialization to 0 of the above two
          type codes plus CORBA::_tc_ValueBase. Thanks to Frank
          Pilhofer <fpilhofe@mc.com> for pointing out the lack of
          _tc_ValueBase.

        * tao/Valuetype/Valuetype_Adapter_Impl.cpp:
        * tao/Valuetype/Valuetype_Adapter_Impl.h:

          Added default constructor in which to do the actual initialization
          of the 3 type codes mentioned above. They are released in the
          destructor.

Tue Aug 12 17:49:27 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* examples/RTScheduling/Fixed_Priority_Scheduler/run_test.pl: 
	* examples/RTScheduling/MIF_Scheduler/run_test.pl: 

	  Added scripts to run the RTScheduler examples.

Tue Aug 12 06:27:19 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.cpp: Missed the
	  checkin last night. This should fix build errors in our daily
	  builds. 

Mon Aug 11 22:37:43 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.h:
	* orbsvcs/orbsvcs/FaultTolerance/FT_Service_Activate.h: Decoupled
	  the dependency between IOGR property and other services required
	  from the FT ORB. There are many use cases where one may want to use
	  the IOGR alone instead of combining it with other FTORB features
	  including special service contexts.

	* orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/server.cpp:
	* orbsvcs/tests/FaultTolerance/IOGR/Manager.cpp:
	* orbsvcs/tests/FaultTolerance/IOGRManipulation/IOGRTest.cpp:
	  #included the required headers. 

	  This decoupling is just fine, since the IOGR would only be used